feat(follow, unfollow and fetch follows):Follow and Unfollow authors, Get followers and following
1. Install all required npm dependencies
2. Create Follower model and migrations with its associations
3. Create profile router
4. Test endpoint to fail
5. create a profile controller method that handles profile activities
6. Write more tests
7. Document API

[Finishes #164198498]
