# server/controllers/index.js
@@ -1,3 +1,5 @@
 import Users from './user';
+import Articles from './article';
+import Profile from './profile';
 
-export { Users };
+export { Users, Articles, Profile };
